[gd_scene load_steps=2 format=3 uid="uid://cj526bk3xcmxb"]

[ext_resource type="Script" uid="uid://w1lamulyaa83" path="res://addons/Libdgx_Atlas_Parser/atlas_parser.gd" id="1_4v7f5"]

[node name="Atlas Parser" type="Panel"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 350.0
script = ExtResource("1_4v7f5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragArea" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
button_mask = 0
text = "Drag [*.atlas] File To Here!"

[node name="LabelContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/LabelContainer"]
layout_mode = 2
text = ".Atlas文件:"
vertical_alignment = 1

[node name="FilePath" type="Label" parent="VBoxContainer/LabelContainer"]
clip_contents = true
custom_minimum_size = Vector2(165.53, 0)
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "加载.Atlas文件"
icon_alignment = 1

[node name="ClearButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "清空路径"

[node name="ParserButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "解析.Atlas文件"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "加载"
cancel_button_text = "取消"
file_mode = 0
filters = PackedStringArray("*.atlas")
